# Web-Dev

./: README.md  package-lock.json
lab1/KhanAcademy/CSS Layout/: challenge_2.html  challenge_3.html  challenge_4.html  challenge_5.html  final.html
lab1/KhanAcademy/CSS Text properties/: challenge_1.html  challenge_2.html  final.html
lab1/KhanAcademy/Intro to CSS/: challenge_1.html  final.html
lab1/KhanAcademy/Intro to HTML/: challenge_1.html  challenge_2.html  challenge_3.html  challenge_4.html  start.html
lab1/KhanAcademy/More CSS selectors/: challenge_1.html  challenge_2.html  challenge_3.html
lab1/KhanAcademy/More HTML tags/: challenge_1.html  challenge_3.html  final.html
lab1/udacity/: index.html  placeholder.html
lab1/udacity/CSS section/: CSS Section 1-5.html  CSS Section 6.html  CSS Section 7.html  CSS Section 8.html
lab2/task1/: index.html  styles.css
lab3/task1/: ch1.html  t11.js  t13.js  t17.js  t18.js  t3.js  t6.html
lab3/task2/: index.html  script.js  styles.css
lab3/task2/fastapi_backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
lab3/task2/fastapi_backend/app/: main.py
lab3/task2/fastapi_backend/app/core/: config.py  logging.py  ls.py
lab3/task2/fastapi_backend/app/src/: database.py  dependencies.py  model.py  repository.py  router.py  schema.py  service.py
lab4/online-store/src/: main.ts
lab5/online-store/: package-lock.json  package.json
lab5/online-store/src/: index.html  main.ts  styles.css
lab6/album-browser/: package.json
lab7/task1/hackerrank/: 14.py  (+7 more)
lab7/task2/: main.py  models.py
(+71 files in other folders)
